--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,35 @@ p {
 }
 
 div {
+    text-align:center;
     color: blue;
+}
+
+#border-container {
     border: 1px solid black;
+}
+
+#large {
+    height: 50%;
+}
+
+#button-container {
+    item-align: center;
+}
+
+.grid-container {
+    display: grid;
+    row-gap: 100px;
+}
+
+.item1 {
+    /* Place item on position 1,1 */
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+.item2 {
+    /* Place item on position 2,1 */
+    grid-column-start: 2;
+    grid-column-end: 3;
 }
